# servo-embedding-template-demos

./: .gitignore  Cargo.toml  README.md  bridge.webidl  build.rs  dev.ps1
.cargo/: config.toml
.github/: dependabot.yml
.github/workflows/: build.yml
src/: main.rs
ui/: package.json
ui/src/: App.tsx
